--- a/EX04_07_kashiwakura/EX04_07_kashiwakura.vcxproj
+++ b/EX04_07_kashiwakura/EX04_07_kashiwakura.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="EX04_07_kashiwakura.cpp" />
+    <ClCompile Include="getVolumeSurface.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="getVolumeSurface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
