--- a/EX04_07_kashiwakura/EX04_07_kashiwakura.vcxproj.filters
+++ b/EX04_07_kashiwakura/EX04_07_kashiwakura.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="EX04_07_kashiwakura.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="getVolumeSurface.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="getVolumeSurface.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
